--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,4 +1,4 @@
-h1{
+h1, h3{
     color: #ffa500;
     text-align: center;
     font-family:'Franklin Gothic Medium', Arial, sans-serif;
@@ -7,7 +7,34 @@ h1{
 body{
     background-color: #ffe4c4;
 }
+
+h3{
+    text-align: left;
+    margin: 0% 10% 0% 30%;
+}
+
 ul{
     text-align: center;
     margin: 0% 40%;
 }
+
+.ingredients{
+    text-align: left;
+    margin: 0% 30% 0% 20%;
+    padding: 0% 10%;
+}
+
+#description{
+    text-align: center;
+}
+
+#food-pic{
+    display:block;
+    margin: auto;
+}
+
+.steps{
+    margin: 0% 20%; 
+
+}
+
